app/assets/stylesheets/pages/items/_index.scss
.container-fluid.bill-index {
  padding: 1.5rem;

  h1, h2, h3, p {
    font-size: 1rem;
  }
}

.dropdown-toggle {
  border-radius: 10px;
  background-color: $ff-red;
  margin: 4px 6px 4px 0;
  border: none;

  // h2 {
  //   align-items: center;
  // }
}

.dropdown.payer {
  align-items: center;

  p {
    margin-top: 0;
  }
}

ul.dropdown-menu {
  border-radius: 15px;
}

.dropdown-menu a {
  text-decoration: none;
  color: black;
}

.dropdown-menu button.person {
  width: calc(100% - 8px);

}

.dropdown-menu .person {
  justify-content: space-evenly;
  border-radius: 20px;
  margin: 4px;

  .person-details {
    align-items: center;
  }

  img.avatar {
    aspect-ratio: 1;
    width: 40px;
    height: 40px;
    margin-right: 10px;
  }

  p {
    margin-bottom: 0;
    margin-right: 10px;
  }
}

.person.delete {
  padding: 16px;
}


// <%# ------------------------------------------------------------- %>

.bill-items, .bill-headers {
  p, h3 {
    text-align: center;
  }
  .item {
    text-align: start;
  }
}

.item-row {
  margin-bottom: 16px;
}

.people {
  background-color: $ff-yellow;
  padding: 6px;
  border-radius: 15px;
  border: none;
  color: $ff-purple;
  margin-bottom: 0;
}

.add-people-button {

  .pop-up {
    padding: 12px;
    border-radius: 24px;
    background-color: $ff-yellow;
    margin: 16px 0;
  }
}

// .person {
//   align-items: center;
//   margin: 20px auto;
//   justify-content: space-between;
//   width: 80%;

//   p {
//     margin: 4px 6px;
//   }
// }

.removed-white {
  background-color: rgb(199, 196, 196)!important;
}

.added-green {
  background-color: $ff-green!important;
  color: white!important;
  font-weight: bold;
}

